# quotebot

./: .dockerignore  .gitignore  PRIVACYPOLICY.md  README.md  TOS.md  backup.py  bot.py  db.py  docker-compose.local.yml  docker-compose.yml  init.sql  justfile  pyproject.toml  quotes.py  requirements.txt  status.py  util.py
src/: bot.py  db.py  quotes.py  util.py
